feat: allow dynamic grid size creation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div id="button-container">
+        <button id="button">Set up new Etch-a-Sketch</button>
+    </div>
     <div id="container"></div>
 </body>
 </html>
